Fix dropshadow graphical glitch and portfolio item misalignment

--- a/src/components/Portfolio/index.css
+++ b/src/components/Portfolio/index.css
@@ -103,7 +103,7 @@
   height: 100%;
   z-index: -2;
   position: absolute;
-  top: 0;
+  top: 50px;
   right: -50%;
 }
 .proj_animation_right {
@@ -155,6 +155,11 @@ a {
 
   .proj_container {
     flex: 50%;
+  }
+
+  .proj_container:nth-child(3) {
+    position: relative;
+    top: -50px;
   }
 
   .port_right {
